# phdtools

./: .gitignore  README.md  pyproject.toml
data/: M2_MSIT_F021_C6_XX_EPOCX_256015_2024.12.12T09.56.24+01.00.json  M2_OA_F021_C6_xX_EPOCX_256015_2024.12.12T09.44.09+01.00.edf  M2_OA_F021_C6_xX_EPOCX_256015_2024.12.12T09.44.09+01.00.json  M2_OA_F021_C6_xX_EPOCX_256015_2024.12.12T09.44.09+01.00.md.edf  M2_OA_F023_C6_XY_EPOCX_256075_2024.12.12T12.37.37+01.00.edf  M2_OA_F023_C6_XY_EPOCX_256075_2024.12.12T12.37.37+01.00.json  M2_OA_F023_C6_XY_EPOCX_256075_2024.12.12T12.37.37+01.00.md.edf  M2_OA_F026_C6_XY_EPOCX_256088_2024.12.12T13.34.21+01.00.edf  M2_OA_F026_C6_XY_EPOCX_256088_2024.12.12T13.34.21+01.00.json  M2_OA_F026_C6_XY_EPOCX_256088_2024.12.12T13.34.21+01.00.md.edf  M2_OA_F045_C8_XX_EPOC_252041_2024.12.04T11.56.23+01.00.edf  M2_OA_F045_C8_XX_EPOC_252041_2024.12.04T11.56.23+01.00.json  M2_OA_F045_C8_XX_EPOC_252041_2024.12.04T11.56.23+01.00.md.edf  M2_OA_F051_C8_XX_EPOCX_242834_2024.12.04T13.29.51+01.00.edf  M2_OA_F051_C8_XX_EPOCX_242834_2024.12.04T13.29.51+01.00.json  M2_OA_F051_C8_XX_EPOCX_242834_2024.12.04T13.29.51+01.00.md.edf
data/filtered_data/: M2_OA_F021_C6_xX_EPOCX_256015_2024.12.12T09.44.09+01.00_raw.fif  M2_OA_F023_C6_XY_EPOCX_256075_2024.12.12T12.37.37+01.00_raw.fif  M2_OA_F026_C6_XY_EPOCX_256088_2024.12.12T13.34.21+01.00_raw.fif  M2_OA_F045_C8_XX_EPOC_252041_2024.12.04T11.56.23+01.00_raw.fif  (+1 more)
doc/: BD_FITBIT_FE_MentalFit.xlsx  Extra_info.docx  codification.md  workflow.md
phdtools/: filetools.py
scripts/: analysis.py  filters.py  final.py  main.py  mapeo.py  reorg.py  unzipper.sh
