[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "phdtools"
version = "0.1.0"
description = "My PhD tools library"
authors = [{ name = "Rosa Ayuso-Moreno", email = "rmayusom@unex.es" }]

# Libraries to be installed among this library
dependencies = [
    "mne>=1.8.0",
    "Unidecode==1.3.8",
]


[project.optional-dependencies]
# Extra tooling
extra = [
    "mne>=1.8.0",
    "jupyterlab>=3",
    "ipywidgets",
    "ipython>=8.20.0",
]
